service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-intro
spec:
  selector:
    app: react-intro
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
