route.yaml
apiVersion: v1
kind: Route
metadata:
  name: react-intro
spec:
  to:
    kind: Service
    name: react-intro
